--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "next-test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "pages/index.js",
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "next": "^11.1.2",
+    "next-pwa": "^5.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
